syntax = "proto3";

option csharp_namespace = "Devices.Grpc";

package devies;

service DevicesService {
	rpc GetDeviceByDeviceNumber (DeviceRequest) returns (DeviceModel);
	rpc GetAllDevices (DeviceAllRequest) returns (stream DeviceModel);
}

message DeviceAllRequest{

}

message DeviceRequest{
	string device_number = 1;
}

message LocationModel {
	int32 id = 1;
	string name = 2;
}

message TimestampConfigurationModel {
	int32 id = 1;
	string cron = 2;
}

message StatusModel {
	int32 id = 1;
	string type = 2;
}

message DeviceModel {
  string id = 1;

  string device_number = 2;
  string register_date = 3;
  string description = 4;
  string name = 5;

  //	location
  string location_id = 6;
  LocationModel location = 7;

  //	location
  string timestamp_configuration_id = 8;
  TimestampConfigurationModel timestamp_configuration = 9;

  //	Status
  string status_id = 10;
  StatusModel status = 11;
}
